<resources>
    <string name="app_name">App Connect</string>
    <string name="app_logo">app_logo</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="forgot_password"><u>Forgot Password?</u> </string>
    <string name="log_in">Log In</string>
    <string name="email_or_username">Email or Username</string>
    <string name="continue_with_github">Continue with GitHub</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="dont_have_account_btn">Don\'t have an account? <font color="#4FD1C5"><b><u>Sign Up</u></b></font></string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="enter_your_email">email</string>
    <string name="enter_your_username">username</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account_btn">Already have an account? <font color="#4FD1C5"><b><u>Log In</u></b></font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>