<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:background="@color/light_background"
    tools:context=".RegisterActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/registerScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <!-- App Logo -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgLogo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"
                android:layout_marginTop="10dp"

                app:shapeAppearanceOverlay="@style/ShapeAppearance.Circle"
                app:layout_constraintCircleRadius="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <!-- App Name -->
            <TextView
                android:id="@+id/txtAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/imgLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <!-- Welcome Text -->
            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/txtAppName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <!-- Email Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                style="@style/AppInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColorHint="@color/input_stroke"
                android:hint="@string/enter_your_email"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/input_icon"
                app:layout_constraintTop_toBottomOf="@id/txtWelcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"

                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Username Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                style="@style/AppInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/input_stroke"
                android:hint="@string/enter_your_username"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                app:startIconDrawable="@drawable/ic_username"
                app:startIconTint="@color/input_icon"
                app:layout_constraintTop_toBottomOf="@id/emailLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"

                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Password Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/AppInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/input_stroke"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/input_icon"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/input_icon"

                app:layout_constraintTop_toBottomOf="@id/usernameLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"

                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirm Password Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordLayout"
                style="@style/AppInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/confirm_password"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/input_stroke"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/input_icon"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/input_icon"

                app:layout_constraintTop_toBottomOf="@id/passwordLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"

                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Register Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="56dp"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                android:layout_marginTop="20dp"

                android:enabled="false"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/black"

                app:backgroundTint="@color/login_button_background"
                app:cornerRadius="28dp"

                app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />



            <!-- Login With -->
            <LinearLayout
                android:id="@+id/txtLoginWith"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/btnRegister"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="#2D3B3B" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="36dp"
                    android:text="@string/or_log_in_with"
                    android:textColor="#6B7A7A"
                    android:textSize="13sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="#2D3B3B" />

            </LinearLayout>


            <!-- Social Login -->
            <LinearLayout
                android:id="@+id/socialLoginContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/txtLoginWith"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <!-- Facebook -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnFacebook"
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/continue_with_facebook"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    app:backgroundTint="@color/input_background"
                    app:cornerRadius="31dp"
                    app:icon="@drawable/facebook"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="@null"
                    app:strokeColor="@color/input_stroke_default"
                    app:strokeWidth="2dp" />

                <!-- Google -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnGoogle"
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/continue_with_google"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    app:backgroundTint="@color/input_background"
                    app:cornerRadius="31dp"
                    app:icon="@drawable/google"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="@null"
                    app:strokeColor="@color/input_stroke_default"
                    app:strokeWidth="2dp" />

                <!-- GitHub -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnGitHub"
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:contentDescription="@string/continue_with_github"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"

                    app:backgroundTint="@color/input_background"
                    app:cornerRadius="31dp"
                    app:icon="@drawable/github"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="@null"
                    app:strokeColor="@color/input_stroke_default"
                    app:strokeWidth="2dp" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/txtBackToLogin"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                android:text="@string/already_have_account_btn"
                android:textAllCaps="false"
                android:textColor="#8A9999"
                android:textSize="14sp"
                app:rippleColor="#204FD1C5"
                app:layout_constraintTop_toBottomOf="@id/socialLoginContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>